# Project_Lang

./: .gitignore  LICENSE  docs.html  index.html  pyproject.toml  script.js
Project_Lang/: README.md
Project_Lang/docs/: style.css
Project_Lang/examples/: closures.lang  fibonacci.lang  fizzbuzz.lang
Project_Lang/lang/: __init__.py  lexer.py  parser.py
examples/: hello.lang
lang/: cli.py  interpreter.py  lang_ast.py
tests/: test_basic.py
